Bug 254539 - [IFC] Incorrect out-of-flow box placement when float is present (display: inline)
Summary: [IFC] Incorrect out-of-flow box placement when float is present (display: inl...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-27 11:40 PDT by zalan
Modified: 2023-03-27 18:14 PDT (History)
5 users (show)

See Also:


Attachments
Patch (13.89 KB, patch)
2023-03-27 11:56 PDT, zalan
no flags Details | Formatted Diff | Diff
[fast-cq]Patch (13.89 KB, patch)
2023-03-27 13:00 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2023-03-27 11:40:01 PDT
ssia
Comment 1 zalan 2023-03-27 11:56:25 PDT
Created attachment 465615 [details]
Patch
Comment 2 zalan 2023-03-27 13:00:37 PDT
Created attachment 465617 [details]
[fast-cq]Patch
Comment 3 EWS 2023-03-27 18:13:47 PDT
Committed 262189@main (05214ae00dbc): <https://commits.webkit.org/262189@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 465617 [details].
Comment 4 Radar WebKit Bug Importer 2023-03-27 18:14:22 PDT
<rdar://problem/107294351>