[IFC] Incorrect out-of-flow box placement when float is present (display: inline) https://bugs.webkit.org/show_bug.cgi?id=254539

Reviewed by Antti Koivisto.

"After the last line content" ((inline level)out-of-flow box positioned after the last line with inflow content) should take floats into account.
(Pass in FloatingContext all the way to contentLeftAfterLastLine, so that we can check if there's a float after the last line.)

* LayoutTests/fast/inline/out-of-flow-inline-with-float-on-last-line-expected.html: Added.
* LayoutTests/fast/inline/out-of-flow-inline-with-float-on-last-line.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::layoutInFlowContent):
(WebCore::Layout::InlineFormattingContext::layoutInFlowContentForIntegration):
(WebCore::Layout::InlineFormattingContext::computeStaticPositionForOutOfFlowContent):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.h:
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.cpp:
(WebCore::Layout::InlineFormattingGeometry::contentLeftAfterLastLine const):
(WebCore::Layout::InlineFormattingGeometry::staticPositionForOutOfFlowInlineLevelBox const):
(WebCore::Layout::InlineFormattingGeometry::lineBoxOffsetAfterLastLine const): Deleted.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.h:

Canonical link: https://commits.webkit.org/262189@main